Add status labels

--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -120,6 +120,15 @@
         
     }
 
+    .issue-status {
+        color: white;
+        margin-left: 2em;
+        padding: 2px;
+        border-radius: 4px 4px 4px 4px;
+        background: black;
+        box-shadow: rgba(0,0,0,0.5) -1px -1px 1px 0px inset;
+    }
+
     #issue_summary > h2 {
         margin-bottom: 0em; 
     }
