--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -14,7 +14,9 @@
         color: #666;
         padding-top: 0.5em;
         padding-left: 20px;
+        padding-bottom: 1em;
         margin-top: 0;
+        border-left: 1px solid #e5e5e5;
     }
 
     .table-message::before {
