--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -156,6 +156,7 @@
         border: 1px solid #e5e5e5;
         border-radius: 3px;
         box-shadow: rgba(0,0,0,0.3) 2px 1px 0px 0px;
+        border-collapse: collapse;
     }
 
     .index-table td {
@@ -178,9 +179,11 @@
         padding-right: 0.5em;
     }
         
-    .index-table > tbody > tr:nth-child(even) {
-        background-color: #f8f8f8;
+    .index-table > tbody > tr {
+        border-bottom: 1px dashed #e5e5e5;
+        height: 2.8em;
     }
+
 
 </style>
 <div id="issue_summary">
