--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -8,6 +8,24 @@
         box-sizing: border-box;
     }
 
+@media (min-width: 1000px) {
+    #issue-summary {
+        position: fixed;
+        top: 20px;
+        left: 2px;
+        width: 25%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+
+    #issues {
+        position: relative;
+        left: 25%;
+        padding-left: 2em;
+        width: 75%;
+    }
+}
+
     .table-message {
         display: table;
         table-layout: fixed;
@@ -24,12 +42,6 @@
         padding-right: 1em;
     }
 
-    #issues {
-        position: relative;
-        left: 25%;
-        padding-left: 2em;
-        width: 75%;
-    }
 
     .chapter {
         width: 800px;
@@ -138,19 +150,7 @@
         box-shadow: rgba(0,0,0,0.5) -1px -1px 1px 0px inset;
         float: right;
     }
-
-    #issue_summary {
-        position: fixed;
-        top: 20px;
-        left: 2px;
-        width: 25%;
-        
-    }
-
-    #issue_summary > h2 {
-        margin-bottom: 0em; 
-    }
-
+    
     .index-table {
         padding-left: 0px;
         border: 1px solid #e5e5e5;
@@ -186,7 +186,7 @@
 
 
 </style>
-<div id="issue_summary">
+<div id="issue-summary">
   <table class="index-table">
     <thead>
       <tr>
