--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -11,6 +11,7 @@
         top: 20px;
         left: 2px;
         width: 25%;
+        max-width: 400px;
     }
 
     #issues {
@@ -18,6 +19,7 @@
         left: 25%;
         padding-left: 2em;
         width: calc(75% - 2em);
+        max-width: 1000px;
     }
 }
 
