--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -12,6 +12,7 @@
         left: 2px;
         width: 25%;
         max-width: 400px;
+        opacity: 0;
     }
 
     #issues {
@@ -20,6 +21,7 @@
         padding-left: 2em;
         width: calc(75% - 2em);
         max-width: 1000px;
+        opacity: 0;
     }
 }
 
@@ -31,13 +33,14 @@
         padding-bottom: 0.2em;
         background: #333;
         color: #EFEFEF;
-         content: "Index";
+        content: "Index";
         font-size: 3em;
     }
 
     #issue-summary {
         width: 100%;
         margin-bottom: 2em;
+        opacity: 0;
     }
 
     #issues::before {
@@ -53,6 +56,7 @@
 
     #issues {
         width: 100%;
+        opacity: 0;
     }
 }
 
@@ -215,6 +219,29 @@
         height: 2.8em;
     }
 
+    #loading {
+        position: absolute;
+        width: 100px;
+        height: 50px;
+        left: calc(50% - 100px);
+        top: 25%;
+        border: 1px solid #e5e5e5;
+        box-shadow: rgba(0,0,0,0.5) -1px -1px 1px 0px inset;
+        padding-left: 1em;
+        padding-top: 1em;
+        background: #57bec7;
+        color: white;
+    }
+
+    #loading p {
+        margin: 0px; 
+    }
+
+    #loading svg {
+        width: 0.6em;
+        margin-right: -0.2em;
+        margin-left: -0.2em;
+    }
 
 </style>
 <div id="issue-summary">
@@ -231,3 +258,12 @@
   </table>
 </div>
 <div id="issues"> </div>
+<div id="loading">
+<p>L
+<svg viewBox="0 0 100 160" id="progress">
+<circle cx="50" cy="115" r="45" stroke="white" stroke-width="20" fill="none">
+        <animate attributeName="r" from="1" to="45" dur="1s" fill="freeze"/>
+    </circle>
+</svg>
+ading...</p>
+</div>
