--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -122,6 +122,7 @@
         width: 100%;
         padding-left: 0;
         margin-top: 0;
+        margin-bottom: 0;
     }
 
     .table-body > li {
@@ -148,7 +149,7 @@
         color: blue;
     }
 
-    .closed-issues {
+    .closed-issue {
         text-decoration: line-through;
     }
 
