--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -226,12 +226,9 @@
         height: 50px;
         left: calc(50% - 100px);
         top: 25%;
-        border: 1px solid #e5e5e5;
-        box-shadow: rgba(0,0,0,0.5) -1px -1px 1px 0px inset;
         padding-left: 1em;
         padding-top: 1em;
-        background: #57bec7;
-        color: white;
+        color: #57bec7;
     }
 
     #loading p {
@@ -262,7 +259,7 @@
 <div id="loading">
 <p>L
 <svg viewBox="0 0 100 160" id="progress">
-<circle cx="50" cy="115" r="45" stroke="white" stroke-width="20" fill="none">
+<circle cx="50" cy="115" r="45" stroke="#57bec7" stroke-width="20" fill="none">
         <animate attributeName="r" from="1" to="45" dur="1s" fill="freeze"/>
     </circle>
 </svg>
