--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<script type="text/javascript" src="svg-cr-issues.js"></script>
+<meta charset="UTF-8" />
+<script src="svg-cr-issues.js"></script>
 <style>
     html {
         font-family: sans-serif;
@@ -91,6 +92,9 @@
         padding-top: 0.6em;
         padding-bottom: 0.5em;
         padding-left: 20px;
+        position: sticky;
+        top: 0px;
+        z-index: 1;
     }
     
    .table-header > a, .table-header > a:visited {
@@ -141,7 +145,6 @@
     }
     
     a, a:visited {
-        text-decoration: none;
         color: #555;
     }
 
