--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -13,6 +13,8 @@
         left: 10px;
         width: 25%;
         max-width: 400px;
+        max-height: calc(100% - 40px);
+        overflow: scroll;
         opacity: 0;
     }
 
@@ -59,6 +61,10 @@
         width: 100%;
         opacity: 0;
     }
+}
+
+#issue-summary {
+    box-shadow: rgba(0,0,0,0.3) 2px 1px 0px 0px;
 }
 
     .table-message {
@@ -197,7 +203,6 @@
         padding-left: 0px;
         border: 1px solid #e5e5e5;
         border-radius: 3px;
-        box-shadow: rgba(0,0,0,0.3) 2px 1px 0px 0px;
         border-collapse: collapse;
         width: 100%;
     }
