--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -265,11 +265,11 @@
 </div>
 <div id="issues"> </div>
 <div id="loading">
-<p>L
+<p>T
 <svg viewBox="0 0 100 160" id="progress">
 <circle cx="50" cy="115" r="45" stroke="#57bec7" stroke-width="20" fill="none">
         <animate attributeName="r" from="1" to="45" dur="1s" fill="freeze"/>
     </circle>
 </svg>
-ading...</p>
+do: Service workers...</p>
 </div>
