Fix scrollbar on index. It looked ugly always on.

--- a/svg2-cr-issues.html
+++ b/svg2-cr-issues.html
@@ -14,7 +14,7 @@
         width: 25%;
         max-width: 400px;
         max-height: calc(100% - 40px);
-        overflow: scroll;
+        overflow-y: auto;
         opacity: 0;
     }
 
